Make nsMenuFrame respond to dynamic changes in the 'key' attribute in a menuitem. Bug 99853. sr=hyatt,r=jag